Uncommented dark mode event listener is JS, and fixed mobile layout of index.html (padding issues)

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -396,6 +396,22 @@ footer {
     transform: translateX(0%);
   }
 
+  .bio-title {
+    padding: 5rem 1rem 1rem;
+  }
+
+  .bio-sub-title {
+    padding: 1rem 1rem 2rem;
+  }
+
+  .skills-container {
+    padding-top: 10rem;
+  }
+
+  .contact-info-container {
+    padding-top: 2rem;
+  }
+
   @keyframes navLinkFade {
     from {
       opacity: 0;
